{
    "name": "BallShooterInput",
    "maps": [
        {
            "name": "ActionMap",
            "id": "841f1114-a8f1-43a6-87cc-3134fea146f2",
            "actions": [
                {
                    "name": "BallShooterMove",
                    "type": "Value",
                    "id": "4a7516e5-b2c7-49ca-928a-1749bb537e11",
                    "expectedControlType": "Axis",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "BallShooterShoot",
                    "type": "Button",
                    "id": "258f7207-e095-45ed-bc8f-be59bb4a76dc",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "AD",
                    "id": "f5ef223d-86e6-46a0-aab5-48369c34101a",
                    "path": "1DAxis",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "BallShooterMove",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "Negative",
                    "id": "7a08c04b-5da5-4589-94a5-cf5788013244",
                    "path": "<Keyboard>/a",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "BallShooterMove",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "Positive",
                    "id": "9799eb8e-d8ae-4334-a4ff-fc32ae825e21",
                    "path": "<Keyboard>/d",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "BallShooterMove",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "Arrows",
                    "id": "553e1f99-c48d-42bc-bf1a-adb6fdf6242c",
                    "path": "1DAxis",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "BallShooterMove",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "Negative",
                    "id": "5f487db0-2abc-42a9-9e14-b921a68368ca",
                    "path": "<Keyboard>/leftArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "BallShooterMove",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "Positive",
                    "id": "c4af24ab-f7ce-4c6d-8a4e-1bfb5f7faaf9",
                    "path": "<Keyboard>/rightArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "BallShooterMove",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "",
                    "id": "4c1ea72a-25a9-4f6e-a9b4-5ff8dee481bf",
                    "path": "<Keyboard>/space",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "BallShooterShoot",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}